# mcp_server

./: CMakeLists.txt  README.md  StreamableHTTP技术实现文档.md  perf.data  test_streamable.sh
Docs/: StreamableHTTP测试文档.md  git_test.md
plugins/code-review/: CodeReview.cpp
plugins/notification/: CMakeLists.txt  Notification.cpp
plugins/sleep/: CMakeLists.txt  Sleep.cpp
plugins/weather/: Weather.cpp
src/: main.cpp
src/interface/: PluginAPI.h
src/loader/: PluginsLoader.cpp  PluginsLoader.h
src/server/: Server.cpp
src/transport/: StreamableTransport.cpp  StreamableTransport.h
src/utils/: MCPBuilder.h  SessionBuilder.h
